# PerlinImpl

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
src/: perlin.cpp  perlin.hpp
tests/: main.cpp
